--- a/.gitignore
+++ b/.gitignore
@@ -12,4 +12,4 @@ __pycache__
 *.ipynb_checkpoints
 *.pytest_cache
 *.pkl
-formula_file/all_column_embeddings.pkl
+.formula_file/all_column_embeddings.pkl
